Use same logic to insert connection in properties/yaml code completion