@@ -8,16 +8,21 @@ package com.microsoft.azure.toolkit.intellij.connector.spring.properties;
 import com.intellij.codeInsight.completion.CompletionParameters;
 import com.intellij.codeInsight.completion.CompletionProvider;
 import com.intellij.codeInsight.completion.CompletionResultSet;
+import com.intellij.codeInsight.completion.InsertionContext;
 import com.intellij.codeInsight.lookup.LookupElement;
 import com.intellij.codeInsight.lookup.LookupElementBuilder;
 import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleUtil;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.util.PsiUtil;
 import com.intellij.util.ProcessingContext;
 import com.microsoft.azure.toolkit.ide.common.icon.AzureIcons;
 import com.microsoft.azure.toolkit.intellij.common.IntelliJAzureIcons;
-import com.microsoft.azure.toolkit.intellij.connector.*;
+import com.microsoft.azure.toolkit.intellij.connector.Connection;
+import com.microsoft.azure.toolkit.intellij.connector.Resource;
+import com.microsoft.azure.toolkit.intellij.connector.ResourceDefinition;
+import com.microsoft.azure.toolkit.intellij.connector.Utils;
 import com.microsoft.azure.toolkit.intellij.connector.dotazure.AzureModule;
 import com.microsoft.azure.toolkit.intellij.connector.dotazure.ConnectionManager;
 import com.microsoft.azure.toolkit.intellij.connector.dotazure.Profile;
@@ -25,7 +30,9 @@ import com.microsoft.azure.toolkit.intellij.connector.dotazure.ResourceManager;
 import com.microsoft.azure.toolkit.intellij.connector.spring.SpringSupported;
 import com.microsoft.azure.toolkit.lib.Azure;
 import com.microsoft.azure.toolkit.lib.auth.AzureAccount;
-import com.microsoft.azure.toolkit.lib.common.task.AzureTaskManager;
+import com.microsoft.azure.toolkit.lib.common.model.AzResource;
+import com.microsoft.azure.toolkit.lib.common.operation.AzureOperation;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.jetbrains.yaml.YAMLUtil;
@@ -33,10 +40,8 @@ import org.jetbrains.yaml.psi.YAMLPsiElement;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class SpringYamlValueCompletionProvider extends CompletionProvider<CompletionParameters> {
     @Override
@@ -47,75 +52,64 @@ public class SpringYamlValueCompletionProvider extends CompletionProvider<Comple
         if (Objects.isNull(yamlElement)) {
             return;
         }
-        final String currentKey = YAMLUtil.getConfigFullName(yamlElement);
-        final List<ResourceDefinition<?>> definitions = ResourceManager.getDefinitions();
-        addYamlValueLookupElements(currentKey, definitions, parameters, result);
-    }
-
-    private void addYamlValueLookupElements(@Nonnull final String key, @Nonnull final List<ResourceDefinition<?>> definitions,
-                                            @Nonnull CompletionParameters parameters, @Nonnull final CompletionResultSet result) {
-        // find correspond resource definition
-        final SpringSupported<?> springSupported = definitions.stream()
+        final String key = YAMLUtil.getConfigFullName(yamlElement);
+        final List<? extends SpringSupported<?>> definitions = ResourceManager.getDefinitions().stream()
                 .filter(d -> d instanceof SpringSupported<?>)
                 .map(d -> (SpringSupported<?>) d)
                 .filter(d -> d.getSpringProperties().stream().anyMatch(p -> StringUtils.equals(p.getKey(), key)))
-                .findFirst().orElse(null);
+                .collect(Collectors.toList());
         final Module module = ModuleUtil.findModuleForPsiElement(parameters.getOriginalFile());
-        if (Objects.isNull(module) || Objects.isNull(springSupported) || !Azure.az(AzureAccount.class).isLoggedIn()) {
+        if (Objects.isNull(module) || CollectionUtils.isEmpty(definitions) || !Azure.az(AzureAccount.class).isLoggedIn()) {
             return;
         }
-        final List<? extends Resource<?>> resources = springSupported.getResources(module.getProject());
-        final Pair<String, String> property = springSupported.getSpringProperties().stream()
-                .filter(p -> StringUtils.equals(p.getKey(), key))
-                .findFirst().orElseThrow(() -> new RuntimeException("cannot find property with key " + key));
+        final List<? extends Resource<?>> resources = definitions.stream()
+                .flatMap(d -> d.getResources(module.getProject()).stream())
+                .toList();
         resources.stream()
-                .map(resource -> createYamlValueLookupElement(module, resource, springSupported, property.getValue()))
+                .map(resource -> createYamlValueLookupElement(module, resource))
                 .filter(Objects::nonNull)
                 .forEach(result::addElement);
     }
 
     @Nullable
-    private LookupElement createYamlValueLookupElement(@Nonnull final Module module, @Nonnull final Resource<?> azResource,
-                                                       @Nonnull final SpringSupported<?> definition, @Nonnull final String template) {
+    private LookupElement createYamlValueLookupElement(@Nonnull final Module module, @Nonnull final Resource<?> resource) {
         final AzureModule azureModule = AzureModule.from(module);
         final Profile defaultProfile = azureModule.getDefaultProfile();
         final List<Connection<?, ?>> connections = Objects.isNull(defaultProfile) ? Collections.emptyList() : defaultProfile.getConnections();
-        final Connection<?, ?> connection = connections.stream()
-                .filter(c -> Objects.equals(c.getResource(), azResource)).findFirst()
-                .orElseGet(() -> createConnection(module, azResource));
-        final String elementValue = YamlUtils.getPropertiesCompletionValue(template, connection);
-        return LookupElementBuilder.create(elementValue)
+        final ResourceDefinition<?> definition = resource.getDefinition();
+        return LookupElementBuilder.create(resource.getName())
                 .withIcon(IntelliJAzureIcons.getIcon(StringUtils.firstNonBlank(definition.getIcon(), AzureIcons.Common.AZURE.getIconPath())))
                 .withBoldness(true)
-                .withPresentableText(azResource.getName())
+                .withPresentableText(resource.getName())
                 .withTypeText("String")
-                .withLookupStrings(List.of(elementValue, azResource.getName()))
-                .withInsertHandler((context, item) -> {
-                    saveConnection(azureModule, connection);
-                    YamlUtils.insertYamlConnection(connection, context);
-                });
+                .withTailText(" " + ((AzResource) resource.getData()).getResourceTypeName())
+                .withLookupStrings(Arrays.asList(resource.getName(), ((AzResource) resource.getData()).getResourceGroupName()))
+                .withInsertHandler((context, item) -> handleYamlConnection(azureModule, resource, context));
     }
 
-    public static Connection<?, ?> createConnection(@Nonnull Module module, @Nonnull Resource<?> resource) {
-        final Resource<?> consumer = ModuleResource.Definition.IJ_MODULE.define(module.getName());
-        // todo: set connection env prefix
-        final ConnectionDefinition connectionDefinition =
-                ConnectionManager.getDefinitionOrDefault(resource.getDefinition(), consumer.getDefinition());
-        final Connection<?, ?> result = connectionDefinition.define(resource, consumer);
-        result.setEnvPrefix(StringUtils.upperCase(resource.getName()));
-        return result;
+    @AzureOperation(name = "user/connector.insert_spring_yaml_properties")
+    private void handleYamlConnection(AzureModule azureModule, Resource<?> resource, InsertionContext context) {
+        final ConnectionManager connectionManager = Optional.ofNullable(azureModule.getDefaultProfile())
+                .map(Profile::getConnectionManager).orElse(null);
+        Utils.createAndInsert(azureModule.getModule(), resource, context, connectionManager, this::insertConnection, null);
     }
 
-    private static void saveConnection(@Nonnull final AzureModule module, @Nonnull final Connection<?, ?> connection) {
-        final AzureTaskManager taskManager = AzureTaskManager.getInstance();
-        taskManager.runOnPooledThread(() ->
-                taskManager.runLater(() ->
-                        taskManager.write(() -> {
-                            final Profile profile = Optional.ofNullable(module.getDefaultProfile())
-                                    .orElseGet(module::initializeWithDefaultProfileIfNot);
-                            profile.createOrUpdateConnection(connection);
-                            profile.save();
-                        })));
+    private void insertConnection(@Nonnull Connection connection, @Nonnull InsertionContext context) {
+        // delete value insert by LookupElement
+        final PsiElement element = PsiUtil.getElementAtOffset(context.getFile(), context.getStartOffset());
+        final YAMLPsiElement yamlElement = Objects.requireNonNull(PsiTreeUtil.getParentOfType(element, YAMLPsiElement.class));
+        final String key = YAMLUtil.getConfigFullName(yamlElement);
+        final SpringSupported<?> definition = (SpringSupported<?>)connection.getResource().getDefinition();
+        final String value = definition.getSpringProperties().stream()
+                .filter(pair -> StringUtils.equalsIgnoreCase(pair.getKey(), key))
+                .findFirst()
+                .map(Pair::getValue)
+                .map(v -> YamlUtils.getPropertiesCompletionValue(v, connection)).orElse(StringUtils.EMPTY);
+        context.getDocument().deleteString(context.getStartOffset(), context.getTailOffset());
+        context.getDocument().insertString(context.getStartOffset(), value);
+        context.commitDocument();
+        // add up missing connection parameters
+        YamlUtils.insertYamlConnection(connection, context);
     }
 }
 
